--- a/Index.ipynb
+++ b/Index.ipynb
@@ -45,9 +45,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pYHpwy4ix2fj",
+        "cellView": "form",
         "outputId": "1ee96622-1083-482e-a23b-3b567405343e"
       },
       "source": [
+        "# @title Conexión con Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "os.chdir('/content/drive/My Drive/course-IA2/')\n",
